--- a/pom.xml
+++ b/pom.xml
@@ -347,6 +347,11 @@
             <artifactId>spring-rest-exception-handler</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>LATEST</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
