--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
         <maven.version>3.1.0</maven.version>
-        <pac4j.version>1.9.0-SNAPSHOT</pac4j.version>
+        <pac4j.version>1.9.0</pac4j.version>
         <hibernate.version>5.1.0.Final</hibernate.version>
         <mysql.connector.version>6.0.2</mysql.connector.version>
         <jackson.version>2.7.4</jackson.version>
@@ -404,6 +404,13 @@
                     <webApp>
                         <contextPath>/</contextPath>
                     </webApp>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
         </plugins>
